--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.rcsb</groupId>
 	<artifactId>mmtf-spark</artifactId>
-	<version>0.0.3-SNAPSHOT</version>
+	<version>0.0.3</version>
 	<packaging>jar</packaging>
 
 	<name>mmtf-spark</name>
@@ -44,7 +44,7 @@
 		<connection>scm:git:git://github.com:rcsb/mmtf-spark.git</connection>
 		<developerConnection>scm:git:git@github.com:rcsb/mmtf-spark.git</developerConnection>
 		<url>https://github.com/rcsb/mmtf-spark</url>
-		<tag>HEAD</tag>
+		<tag>mmtf-spark-0.0.3</tag>
 	</scm>
 
 	
