--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<slf4j.version>1.7.21</slf4j.version>
 		<log4j.version>2.5</log4j.version>
 		<mmtf.version>0.2.1</mmtf.version>
+		<spark.version>1.6.1</spark.version>
 	</properties>
 
 	<scm>
@@ -95,17 +96,17 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.11</artifactId>
-			<version>1.6.1</version>
+			<version>${spark.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-mllib_2.11</artifactId>
-			<version>1.6.1</version>
+			<version>${spark.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.11</artifactId>
-			<version>1.6.1</version>
+			<version>${spark.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
